<resources>
    <string name="app_name">Apirat_App</string>
    <string name="title_activity_menu__activty">Menu_Activty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="over_view">ดูข้อมูลโดยรวม</string>
    <string name="str_profile">ดูข้อมูลส่วนตัว</string>
    <string name="list_all">ดูรายการมาเรียน</string>
    <string name="showQR">QR CODE</string>
    <string name="str_call_ta">ติดต่อ TA</string>
    <string name="exit">EXIT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show__qr">My QR code</string>
    <string name="profile_title">ข้อมูลส่วนตัว</string>
    <string name="student_code">รหัสประจำตัวนักศึกษา</string>
    <string name="fname_lname">ชื่อ-นามสกุล</string>
    <string name="book_code">รหัสหนังสือ</string>
    <string name="num_user">ลำดับที่ในชั้นเรียน</string>
    <string name="title_activity_show_over_view">showOverView</string>
    <string name="countdate">จำนวนครั้งที่เช็ก</string>
</resources>
