<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.bsru.apirat.apirat_app.show_profile"
    android:background="@drawable/bgschool">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar3"
        app:title="@string/profile_title"
        app:titleTextColor="@color/common_google_signin_btn_text_dark_default" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar3"
        android:layout_above="@+id/btn_back_profile"
        android:paddingTop="40dp"
        android:paddingBottom="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEED2">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/sub_title"
                app:titleTextColor="@color/common_google_signin_btn_text_dark_default" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#92ffffff"
                android:layout_marginBottom="7dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/student_card"
                        android:id="@+id/imageView5"
                        android:layout_weight="1"
                        android:layout_width="70dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="10dp">

                        <TextView
                            android:text="@string/student_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            android:textColor="#422D04" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/std_code"
                            android:textColor="#b75d4109" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#92ffffff"
                android:layout_marginBottom="7dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/name_icon"
                        android:id="@+id/imageView6"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="10dp">

                        <TextView
                            android:text="@string/fname_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView11"
                            android:textColor="#422D04" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/student_name"
                            android:textColor="#b75d4109" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#92ffffff"
                android:layout_marginBottom="7dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/book_icon"
                        android:id="@+id/imageView7"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:gravity="center">

                        <TextView
                            android:text="@string/book_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView13"
                            android:textColor="#422D04" />

                        <TextView
                            android:text="4543"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/book_code"
                            android:textColor="#b75d4109" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#92ffffff"
                android:layout_marginBottom="7dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/number_user"
                        android:id="@+id/imageView9"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:gravity="center">

                        <TextView
                            android:text="@string/num_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView15"
                            android:textColor="#422D04" />

                        <TextView
                            android:text="12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/user_num"
                            android:textColor="#b75d4109" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <Button
        android:text="BACK"
        android:layout_width="match_parent"
        android:id="@+id/btn_back_profile"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:background="#F1B516"
        android:textSize="24sp" />
</RelativeLayout>
